# pythonCudaOptimizationExample

./: .clang-format  .gitignore  README.md  input.txt  output.txt  requirements.txt
cuda_example/: compile.sh  demo.cu  demo_kernel.cu  demo_overlap.cu  demo_overlap_transpose.cu  demo_transpose.cu
cuda_example/include/: CheckError.i.cuh
cupy_example/: compile.sh  demo.py  demo2.py  demo_cupy.py  transpose.cu  transpose.cubin
numpy_example/: demo.py
pybind11_example/: .gitignore  CMakeLists.txt  compile.bash  demo.py  main.cu  main.py  numpy_test.py  setup.py
pybind11_example/include/: CheckError.cuh  cuda_accelerations.h  matrix_transpose.cuh  transpose.cuh  wrapper.h
pybind11_example/src/: cuda_accelerations.cpp  main.cu  matrix_transpose.cu  transpose.cu  wrapper.cpp
pycuda_example/: .gitignore  compile.sh  cuda_accelerations.py  demo.py  transpose.cu
tensor_transpose/: compile.sh  demo.cu  demo.py  test_generator.py  testbench.cu  testbench.txt
transpose/: .gitignore  analyze_device.py  analyze_kernel.py  analyze_matrix.py  bank_conflict_checker.py  compile.sh  demo_device.cu  demo_kernel.cu  demo_matrix.cu  gen_tensor.py  process_logs_device.py  process_logs_kernel.py  testbench.sh
